# bapliehandler

./: ApplicationWindow.cpp  ApplicationWindow.h  BaplieVwQML.qrc  CMakeLists.txt  HandleBaplie.cpp  HandleBaplie.h  Main.qml  ReadBaplie.cpp  ReadBaplie.h  StatusText.qml  TableBaplieContent.cpp  TableBaplieContent.h  TableModelSummary.cpp  TableModelSummary.h  baplievw.rc  main.cpp
Interface/: FileDialogOpenBaplie.qml  FooterStatusBar.qml  HeaderMenuBar.qml  TableContentBaplie.qml  TableContentSummary.qml  TableContentSummary.qml.autosave  TextAreaProjectDescription.qml  TextAreaRawBaplie.qml
